# granite.debug-tools

./: .env.example  DEPENDENCIES.md  README.md  config.json  requirements-dev.txt  requirements.txt
runtimes-validator/: .gitignore  CLAUDE.md  README.md  WEEKLY_VALIDATION.md  pyproject.toml  weekly_matrix.toml  weekly_report.py
runtimes-validator/.claude/: settings.json
runtimes-validator/src/granite_validation/: cli.py  runner.py
runtimes-validator/src/granite_validation/engines/: base.py  llamacpp.py  ollama.py  vllm.py
runtimes-validator/src/granite_validation/tests/: registry.py
runtimes-validator/src/granite_validation/tests/common/: test_basic_generation.py  test_concurrent_requests.py  test_long_input.py  test_tool_calling.py  (+1 more)
runtimes-validator/src/runtimes_validator/: cli.py  runner.py
runtimes-validator/src/runtimes_validator/domain/: models.py
runtimes-validator/src/runtimes_validator/engines/: base.py  llamacpp.py  ollama.py  openai_compat.py  registry.py  vllm.py
runtimes-validator/src/runtimes_validator/reporting/: base.py  console.py  inspection.py  json_reporter.py
runtimes-validator/src/runtimes_validator/tests/: base.py  registry.py
runtimes-validator/tests/: test_cli.py  test_cli_modalities.py  test_console_reporter.py  test_custom_headers.py  test_inspection_logger.py  test_llamacpp_engine.py  test_llamacpp_multimodal.py  test_modalities_filter.py  test_multi_tool_calling.py  test_multimodal_engine_plumbing.py  test_multimodal_payloads.py  test_ollama.py  test_openai_compat.py  test_registry.py  test_runner.py  test_vllm_engine.py
(+83 files in other folders)
